--- a/html/puzzleGameBoardPage.html
+++ b/html/puzzleGameBoardPage.html
@@ -1,1 +1,39 @@
-test
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<title>PUZZLE THERAPY</title>
+
+    	<!--BOOTSTRAP CSS LINK-->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" 
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+	<link rel="stylesheet" href="../styles/puzzleGameBoardPage.css">
+</head>
+
+<body>
+    <section id="mainSection" class="container-fluid bg-black">
+
+        <div id="rowContainer" class="row mt-2 bg-coral"> 
+
+			<div id="col1" class="col-lg-7 col-md-3 bg-powderblue"> 
+               <canvas>
+                    
+
+
+
+               </canvas> 
+			</div>
+
+			<div id="col2" class="col-lg-3 col-md-9 m-0 bg-plum">
+                second section
+            </div>
+              
+        </div>
+    </section>
+
+    <script type="text/javascript"  src="../scripts/puzzleGameBoardPage.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+</body>
+</html>
