--- a/html/puzzleGameBoardPage.html
+++ b/html/puzzleGameBoardPage.html
@@ -17,23 +17,21 @@
 
         <div id="rowContainer" class="row mt-2 bg-coral"> 
 
-			<div id="col1" class="col-lg-7 col-md-3 bg-powderblue"> 
-               <canvas>
-                    
+			<div id="col1" class="col-lg-1 col-md-1 bg-powderblue"> 
 
-
-
-               </canvas> 
 			</div>
 
-			<div id="col2" class="col-lg-3 col-md-9 m-0 bg-plum">
+			<!-- <div id="col2" class="col-lg-3 col-md-9 m-0 bg-plum">
                 second section
-            </div>
+            </div> -->
               
         </div>
     </section>
 
-    <script type="text/javascript"  src="../scripts/puzzleGameBoardPage.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script type="text/javascript"  src="../scripts/puzzleGameBoardPage.js"></script>
 </body>
 </html>
+
+
+
