--- a/html/puzzleGameBoardMainPage.html
+++ b/html/puzzleGameBoardMainPage.html
@@ -19,6 +19,7 @@
 
 			<div id="col1" class="col-lg-1 col-md-1 bg-powderblue"> 
 
+
 			</div>
 
 			<!-- <div id="col2" class="col-lg-3 col-md-9 m-0 bg-plum">
@@ -29,7 +30,8 @@
     </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script type="text/javascript"  src="../scripts/puzzleGameBoardPage.js"></script>
+    <script type="text/javascript"  src="../scripts/puzzleGameBoardMainPage/puzzleGameBoardPage.js"></script>
+    <script type="text/javascript"  src="../scripts/puzzleGameBoardMainPage/confetti.min.js"></script>
 </body>
 </html>
 
