--- a/index.html
+++ b/index.html
@@ -1,1 +1,52 @@
-test
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<title>PUZZLE THERAPY</title>
+
+    <!--BOOTSTRAP CSS LINK-->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" 
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+     <!--FONT LINK-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap" rel="stylesheet">
+
+	<link rel="stylesheet" href="./styles/indexStyle.css">
+</head>
+
+<body>
+    <section class="animation-area" class="container-fluid bg-black m-0">
+
+        <div id="rowContainer" class="row mt-0"> 
+
+			<div id="col1" class="col-lg-12 col-md-12 bg-powderblue"> 
+
+                <h1>PUZZLE THERAPY</h1>
+                <img src="./images/puzzleIcon.png">
+
+
+
+			</div>
+
+        </div>
+
+        <ul class="box-area">
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+
+    </section>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script type="text/javascript"  src="./scripts/indexScript.js"></script>
+</body>
+</html>
+
+
+
