--- a/index.html
+++ b/index.html
@@ -24,11 +24,8 @@
 
 			<div id="col1" class="col-lg-12 col-md-12 bg-powderblue"> 
 
-                <h1>PUZZLE THERAPY</h1>
-                <img src="./images/puzzleIcon.png">
-
-
-
+                <h1>Puzzle Therapy</h1>
+                <img id="puzzleImage" src="./images/puzzleIcon.png">
 			</div>
 
         </div>
