--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>PUZZLE THERAPY</title>
+	<title>THERAPY PUZZLE</title>
 
     <!--BOOTSTRAP CSS LINK-->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" 
@@ -24,7 +24,8 @@
 
 			<div id="col1" class="col-lg-12 col-md-12 bg-powderblue"> 
 
-                <h1>Puzzle Therapy</h1>
+                <h1>Therapy Puzzle</h1>
+                <button>sffsdgsd</button>
                 <img id="puzzleImage" src="./images/puzzleIcon.png">
 			</div>
 
