--- a/html/puzzleGameBoardMainPage.html
+++ b/html/puzzleGameBoardMainPage.html
@@ -3,31 +3,54 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>PUZZLE THERAPY</title>
+	<title>THERAPY PUZZLE</title>
 
-    	<!--BOOTSTRAP CSS LINK-->
+    <!--BOOTSTRAP CSS LINK-->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-	<link rel="stylesheet" href="../styles/puzzleGameBoardPage.css">
+     <!--FONT LINK-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap" rel="stylesheet">
+
+	<link rel="stylesheet" href="../styles/indexStyle.css">
+    <link rel="stylesheet" href="../styles/puzzleGameBoardPage.css">
 </head>
 
 <body>
-    <section id="mainSection" class="container-fluid bg-black">
 
-        <div id="rowContainer" class="row mt-2 bg-coral"> 
+    <section id="mainSection" class="container-fluid animation-area">
 
-			<div id="col1" class="col-lg-1 col-md-1 bg-powderblue"> 
+        <div id="rowContainer" class="row m-0 p-0"> 
 
-			</div>
+            <div id="col1" class="col-lg-1 col-md-1 m-0 p-0"> 
+
+            </div>
         </div>
     </section>
 
+
+    <!--For animation in the background-->
+    <ul class="box-area" id="area2">
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script type="text/javascript"  src="../scripts/indexScript.js"></script>
     <script type="text/javascript"  src="../scripts/puzzleGameBoardMainPage/puzzleGameBoardPage.js"></script>
     <script type="text/javascript"  src="../scripts/puzzleGameBoardMainPage/confetti.min.js"></script>
 </body>
 </html>
+
+
+
+
 
 
 
