--- a/html/puzzleGameBoardMainPage.html
+++ b/html/puzzleGameBoardMainPage.html
@@ -13,6 +13,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:ital@1&display=swap" rel="stylesheet">
 
 	<link rel="stylesheet" href="../styles/indexStyle.css">
     <link rel="stylesheet" href="../styles/puzzleGameBoardPage.css">
@@ -27,8 +30,11 @@
             <div id="col1" class="col-lg-1 col-md-1 m-0 p-0"> 
 
             </div>
+            
         </div>
     </section>
+
+
 
 
     <!--For animation in the background-->
