--- a/html/selectCategory.html
+++ b/html/selectCategory.html
@@ -29,14 +29,14 @@
                     <div class="form per-det">
                         <h2>Let us know you more...</h2>
                         <label>
-                            <span class="m-5" id="yourName">Your name</span>
-                            <input type="text" class="m-3" name="name">
+                            <span class="m-5">Your name</span>
+                            <input id="yourName" type="text" class="m-3" name="name">
                         </label>
                         <label>
                             <span>Your email</span>
-                            <input type="email" class="m-3" name="email">
+                            <input id="yourEmail" type="email" class="m-3" name="email">
                         </label>
-                        <button class="submit" type="button">Approve Your Details</button>
+                        <button id="approveDetailsBtt" class="submit" type="button">Approve Your Details</button>
                     </div>
 
                     <div class="sub-cont">
