--- a/html/puzzleGameBoardMainPage.html
+++ b/html/puzzleGameBoardMainPage.html
@@ -23,12 +23,14 @@
 
 <body>
 
+    <audio src="../audio/applause.mp3" id="applause" loop="loop"></audio>
+
     <section id="mainSection" class="container-fluid animation-area">
 
         <div id="rowContainer" class="row m-0 p-0"> 
 
             <div id="col1" class="col-lg-1 col-md-1 m-0 p-0"> 
-
+              
             </div>
             
         </div>
