--- a/html/puzzleGameBoardMainPage.html
+++ b/html/puzzleGameBoardMainPage.html
@@ -34,23 +34,47 @@
             <div id="col2" class="col-lg-4 col-md-4 m-0 p-0"> 
               
             </div>
-            
+
+            <div id="col3" class="navigation col-lg-4 col-md-4 m-0 p-0"> 
+                <ul>
+                    <li class="list active">
+                        <a href="file:///C:/Users/avi/Desktop/HACKATHON_1/index.html">
+                            <span class="icon"><ion-icon name="home-outline"></ion-icon></span>
+                            <span class="title">Home</span>    
+                        </a>
+                    </li>
+                    <li class="list">
+                        <a href="file:///C:/Users/avi/Desktop/HACKATHON_1/html/puzzleGameBoardMainPage.html">
+                            <span class="icon"><ion-icon name="game-controller-outline"></ion-icon></span>
+                            <span class="title">NewGame</span>  
+                        </a>
+                    </li>
+                    <li class="list">
+                        <a href="#">
+                            <span class="icon"><ion-icon name="timer-outline"></ion-icon></span>
+                            <span class="title">Timer</span>  
+                        </a>
+                    </li>
+                    <li class="list">
+                        <a href="#">
+                            <span class="icon"><ion-icon name="exit-outline"></ion-icon></span>
+                            <span class="title">Exit</span>    
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
+
+        <div class="toggle">
+            <ion-icon name="menu-outline" class="open"></ion-icon>
+            <ion-icon name="close-outline" class="close"></ion-icon>
+        </div>
+
     </section>
 
-
-    <!--For animation in the background-->
-    <ul class="box-area" id="area2">
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-    </ul>
-
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script type="text/javascript"  src="../scripts/indexScript.js"></script>
     <script type="text/javascript"  src="../scripts/puzzleGameBoardMainPage/puzzleGameBoardPage.js"></script>
     <script type="text/javascript"  src="../scripts/puzzleGameBoardMainPage/confetti.min.js"></script>
 </body>
