--- a/html/puzzleGameBoardMainPage.html
+++ b/html/puzzleGameBoardMainPage.html
@@ -50,7 +50,7 @@
                         </a>
                     </li>
                     <li class="list">
-                        <a href="#">
+                        <a onclick="addToTimer10Sec()">
                             <span class="icon"><ion-icon name="timer-outline"></ion-icon></span>
                             <span class="title">Timer</span>  
                         </a>
