--- a/html/puzzleGameBoardMainPage.html
+++ b/html/puzzleGameBoardMainPage.html
@@ -3,31 +3,89 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>PUZZLE THERAPY</title>
+	<title>THERAPY PUZZLE</title>
 
-    	<!--BOOTSTRAP CSS LINK-->
+    <!--BOOTSTRAP CSS LINK-->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-	<link rel="stylesheet" href="../styles/puzzleGameBoardPage.css">
+     <!--FONT LINK-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:ital@1&display=swap" rel="stylesheet">
+
+	<link rel="stylesheet" href="../styles/indexStyle.css">
+    <link rel="stylesheet" href="../styles/puzzleGameBoardPage.css">
 </head>
 
 <body>
-    <section id="mainSection" class="container-fluid bg-black">
 
-        <div id="rowContainer" class="row mt-2 bg-coral"> 
+    <section id="mainSection" class="container-fluid animation-area">
 
-			<div id="col1" class="col-lg-1 col-md-1 bg-powderblue"> 
+        <div id="rowContainer" class="row m-0 p-0"> 
 
-			</div>
+            <div id="col1" class="col-lg-1 col-md-1 m-0 p-0"> 
+              
+            </div>
+
+            <div id="col2" class="col-lg-4 col-md-4 m-0 p-0"> 
+              
+            </div>
+
+            <div id="col3" class="navigation col-lg-4 col-md-4 m-0 p-0"> 
+                <ul>
+                    <li class="list active">
+                        <a href="file:///C:/Users/avi/Desktop/HACKATHON_1/index.html">
+                            <span class="icon"><ion-icon name="home-outline"></ion-icon></span>
+                            <span class="title">Home</span>    
+                        </a>
+                    </li>
+                    <li class="list">
+                        <a href="file:///C:/Users/avi/Desktop/HACKATHON_1/html/puzzleGameBoardMainPage.html">
+                            <span class="icon"><ion-icon name="game-controller-outline"></ion-icon></span>
+                            <span class="title">NewGame</span>  
+                        </a>
+                    </li>
+                    <li class="list">
+                        <a onclick="addToTimer10Sec()">
+                            <span class="icon"><ion-icon name="timer-outline"></ion-icon></span>
+                            <span class="title">Timer</span>  
+                        </a>
+                    </li>
+                    <li class="list">
+                        <a href="#">
+                            <span class="icon"><ion-icon name="exit-outline"></ion-icon></span>
+                            <span class="title">Exit</span>    
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
+
+        <div class="toggle">
+            <ion-icon name="menu-outline" class="open"></ion-icon>
+            <ion-icon name="close-outline" class="close"></ion-icon>
+        </div>
+
     </section>
 
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script type="text/javascript"  src="../scripts/puzzleGameBoardMainPage/puzzleGameBoardPage.js"></script>
     <script type="text/javascript"  src="../scripts/puzzleGameBoardMainPage/confetti.min.js"></script>
 </body>
 </html>
+
+
+
+
+
+
+
 
 
 
