--- a/html/selectCategory.html
+++ b/html/selectCategory.html
@@ -29,14 +29,14 @@
                     <div class="form per-det">
                         <h2>Let us know you more...</h2>
                         <label>
-                            <span>Your name</span>
-                            <input type="text" name="name">
+                            <span class="m-5">Your name</span>
+                            <input id="yourName" type="text" class="m-3" name="name">
                         </label>
                         <label>
                             <span>Your email</span>
-                            <input type="email" name="email">
+                            <input id="yourEmail" type="email" class="m-3" name="email">
                         </label>
-                        <button class="submit" type="button">Approve Your Details</button>
+                        <button id="approveDetailsBtt" class="submit" type="button">Approve Your Details</button>
                     </div>
 
                     <div class="sub-cont">
@@ -57,22 +57,22 @@
                         <div class="form gam-cat">
                             <h2>Choose your game</h2>
                             <label class="radioCategories">
-                                <span>choose your category</span>
+                                <span id="cat-title">choose your category</span>
                                 <!-- Default radio -->
-                                <div class="form-check-category">
-                                    <input class="form-check-input" type="radio" name="category" id="radioCategory" />
+                                <div class="form-check-category form-check">
+                                    <input class="form-check-input" type="radio" name="category" id="radioCategory flexRadioDefault1" />
                                     <label class="form-check-label" for="flexRadioDefault1"> animals </label>
                                 </div>
 
                                 <!-- Default radio -->
-                                <div class="form-check-category">
-                                    <input class="form-check-input" type="radio" name="category" id="radioCategory" />
+                                <div class="form-check-category form-check">
+                                    <input class="form-check-input" type="radio" name="category" id="radioCategory flexRadioDefault1" />
                                     <label class="form-check-label" for="flexRadioDefault1"> views </label>
                                 </div>
 
                                 <!-- Default checked radio -->
-                                <div class="form-check-category">
-                                    <input class="form-check-input" type="radio" name="category" id="radioCategory" checked />
+                                <div class="form-check-category form-check">
+                                    <input class="form-check-input" type="radio" name="category" id="radioCategory flexRadioDefault2" checked />
                                     <label class="form-check-label" for="flexRadioDefault2"> food
                                     </label>
                                 </div>
@@ -80,20 +80,20 @@
                             <label class="radioLevels">
                                 <span>choose your game level</span>
                                  <!-- Default radio -->
-                                <div class="form-check-level">
-                                    <input class="form-check-input" type="radio" name="level" id="radioLevel" />
+                                <div class="form-check-level form-check">
+                                    <input class="form-check-input" type="radio" name="level" id="radioLevel flexRadioDefault1" />
                                     <label class="form-check-label" for="flexRadioDefault1"> easy </label>
                                 </div>
 
                                 <!-- Default radio -->
-                                <div class="form-check-level">
-                                    <input class="form-check-input" type="radio" name="level" id="radioLevel" />
+                                <div class="form-check-level form-check">
+                                    <input class="form-check-input" type="radio" name="level" id="radioLevel flexRadioDefault1" />
                                     <label class="form-check-label" for="flexRadioDefault1"> medium </label>
                                 </div>
 
                                 <!-- Default checked radio -->
-                                <div class="form-check-level">
-                                    <input class="form-check-input" type="radio" name="level" id="radioLevel" checked />
+                                <div class="form-check-level form-check">
+                                    <input class="form-check-input" type="radio" name="level" id="radioLevel flexRadioDefault2" checked />
                                     <label class="form-check-label" for="flexRadioDefault2"> hard </label>
                                 </div>
                             </label>
